--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- NAVBAR -->
     <nav
-      class="navbar navbar-expand-sm bg-primary navbar-dark shadow-sm"
+      class="navbar navbar-expand-sm bg-info navbar-dark shadow-sm"
       id="home"
     >
       <div class="container">
