update about me

--- a/index.html
+++ b/index.html
@@ -71,15 +71,11 @@
         <div class="row justify-content-center fs-5 mb-3">
           <div class="col-md-4">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-              facilis exercitationem debitis quam nihil. Quisquam odit beatae
-              facilis labore? Hic reprehenderit explicabo molestiae, totam
-              molestias maxime minus adipisci dolor modi.
+              Irwan Prasetya. Lahir di Jakarta pada tanggal 8 April 1994. Lulusan magister Pendidikan Agama Islam pada tahun 2020 ini sebelumnya bekerja di SMK Negeri 52 Jakarta sebagai guru Pendidikan Agama Islam dan sekarang fokus menjadi dosen di Politeknik Negeri Jakarta. 
             </p>
           </div>
           <div class="col-md-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            quas, provident itaque veniam id eum! Lorem ipsum dolor sit amet.
+            Ketertarikannya di dunia pendidikan sudah mulai ditekuni sejak masa-masa sekolah dengan menjadi volunteer tenaga pengajar di yayasan sosial. Sejak tahun 2017 hingga saat ini, penulis fokus dalam mengembangkan ilmu di bidang Pendidikan Agama Islam dan Teknologi Informatika, khususnya dalam web programming dan database (front-end dan back-end).
           </div>
         </div>
       </div>
